@@ -1,10 +1,15 @@
 package io.step5.aakorea.repository;
 
-import io.step5.aakorea.domain.*;
+import io.step5.aakorea.domain.Group;
+import io.step5.aakorea.domain.Meeting;
+import io.step5.aakorea.domain.MeetingPlace;
+import io.step5.aakorea.domain.MeetingStatus;
+import io.step5.aakorea.domain.MeetingType;
+import io.step5.aakorea.domain.Province;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.annotation.Rollback;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.DayOfWeek;
@@ -12,48 +17,49 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 @SpringBootTest
+@ActiveProfiles("test")
 class MeetingRepositoryTest {
 
-    @Autowired GroupRepository groupRepository;
-    @Autowired MeetingRepository meetingRepository;
+    @Autowired
+    GroupRepository groupRepository;
+
+    @Autowired
+    MeetingRepository meetingRepository;
 
     @Test
     @Transactional
-    @Rollback(false) // 💡 핵심! 테스트가 끝나도 롤백(취소)하지 말고 DB에 데이터를 남겨라!
     void 모임_생성_및_요일별_조회_테스트() {
-
-        // 1. 가짜 그룹 데이터 만들기
         Group group = new Group();
         group.setName("희망 그룹");
         group.setStartDate(LocalDate.of(2010, 5, 1));
         group.setProvince(Province.GYEONGGI);
 
-        // 스프링이 INSERT SQL을 알아서 날려줍니다.
+        MeetingPlace meetingPlace = new MeetingPlace();
+        meetingPlace.setRoadAddress("경기도 수원시 팔달구 1");
+        meetingPlace.setDetailAddress("3층");
+        group.setMeetingPlace(meetingPlace);
+
         groupRepository.save(group);
 
-        // 2. 가짜 모임 데이터 만들기 (매주 금요일 저녁 8시)
         Meeting meeting = new Meeting();
         meeting.setDayOfWeek(DayOfWeek.FRIDAY);
-        meeting.setStartTime(LocalTime.of(20, 0)); // 20시 00분
-        meeting.setMeetingType(MeetingType.OPEN);  // 공개 모임
-        meeting.setStatus(MeetingStatus.ACTIVE);   // 활성 상태
-        meeting.setGroup(group); // ⭐ 핵심: 이 모임은 '희망 그룹'의 모임이다! (관계 맺기)
+        meeting.setStartTime(LocalTime.of(20, 0));
+        meeting.setMeetingType(MeetingType.OPEN);
+        meeting.setStatus(MeetingStatus.ACTIVE);
+        meeting.setGroup(group);
 
         meetingRepository.save(meeting);
 
-        // 3. 요일로 검색해보기 (우리가 아까 만든 마법의 메서드)
         List<Meeting> result = meetingRepository.findByGroup_ProvinceAndDayOfWeekOrderByStartTimeAsc(
                 Province.GYEONGGI,
                 DayOfWeek.FRIDAY
         );
 
-        System.out.println("=====================================");
-        System.out.println("검색된 경기도 금요일 모임 개수: " + result.size() + "개");
-        if (!result.isEmpty()) {
-            System.out.println("첫 번째 모임 그룹명: " + result.get(0).getGroup().getName());
-            System.out.println("모임 시작 시간: " + result.get(0).getStartTime());
-        }
-        System.out.println("=====================================");
+        assertThat(result).hasSize(1);
+        assertThat(result.getFirst().getGroup().getName()).isEqualTo("희망 그룹");
+        assertThat(result.getFirst().getStartTime()).isEqualTo(LocalTime.of(20, 0));
     }
 }
